# vexflowcpp

./: .gitignore  CMakeLists.txt  README.md
node/: package-lock.json  package.json  webpack.config.cjs
node/src/: index.js
src/: CMakeLists.txt  bundle_instance.cpp  canvas.cpp  canvas.h  javascript_runtime.cpp  javascript_runtime.h  main.cpp  main.mjs  readfile.cpp  readfile.h  renderer.cpp  renderer.h  stb_truetype_instance.cpp  vexflow_wrap.js  vexflow_wrap.mjs  wrap.mjs
test/: test0.js  test1.js
tools/: bundle_files.py
